# airo-wingman

./: .gitignore  Cargo.toml  Dockerfile  README.md  metadata.scale  rustfmt.toml
.github/templates/setup-build/: action.yml
.github/workflows/: build-test.yml  linters.yml  publish-artifact.yml
.maintain/: linters.sh
.maintain/cog/FHEModels/: DecisionTreeClassifier.ipynb  README.md  client.py  cog.yaml  dev.py  generate_circuit_and_predict.py  model.pkl  predict.py  test.py  test_results.txt  train.py  train_data.csv
.maintain/cog/FHEModels/.cog/: openapi_schema.json
.maintain/cog/FHEModels/client/: Dockerfile  client.py  client_http.py  cog.yaml  predict.py  requirements.txt
.maintain/cog/FHEModels/client/.cog/: openapi_schema.json
.maintain/cog/FHEModels/client/enc_test_data/: 0-10.csv  10-20.csv  100-110.csv  110-120.csv  140-150.csv  150-160.csv  160-170.csv  180-190.csv  190-200.csv  220-230.csv  230-240.csv  240-250.csv  250-260.csv  280-290.csv  300-310.csv  330-340.csv  350-360.csv  370-380.csv  390-400.csv  40-50.csv  440-450.csv  450-460.csv  460-470.csv  470-480.csv  490-500.csv  50-60.csv  530-540.csv  540-550.csv  550-560.csv  560-570.csv  570-580.csv  580-590.csv  590-600.csv  600-610.csv  650-660.csv  660-670.csv  670-680.csv  680-690.csv  690-700.csv  70-80.csv
.maintain/cog/FHEModels/client/ground_truths/: 100-110.csv  380-390.csv  430-440.csv  560-570.csv  60-70.csv  600-610.csv  660-670.csv
.maintain/cog/FHEModels/client/legacy/: Dockerfile  client.py  predict.py  requirements.txt  test.py  test_results.txt  test_results_0.txt
.maintain/cog/FHEModels/client/test_data/: 0.csv  1.csv  10.csv  100.csv  101.csv  102.csv  103.csv  104.csv  105.csv  106.csv  107.csv  108.csv  109.csv  11.csv  110.csv  111.csv  112.csv  113.csv  114.csv  115.csv  116.csv  117.csv  118.csv  119.csv  120.csv  121.csv  122.csv  123.csv  124.csv  125.csv  126.csv  127.csv  128.csv  129.csv  13.csv  130.csv  131.csv  132.csv  133.csv  134.csv  (+632 more)
.maintain/cog/FHEModels/concrete_model/: train.py
.maintain/cog/FHEModels/concrete_model/ground_truths/: ground_truth150-160.csv  ground_truth180-190.csv  ground_truth190-200.csv  ground_truth260-270.csv  ground_truth290-300.csv  ground_truth30-40.csv  ground_truth300-310.csv  ground_truth340-350.csv  (+9 more)
.maintain/cog/FHEModels/ground_truths/: 120-130.csv  130-140.csv  140-150.csv  160-170.csv  170-180.csv  240-250.csv  280-290.csv  330-340.csv  40-50.csv  400-410.csv  440-450.csv  510-520.csv  590-600.csv  640-650.csv  680-690.csv  ground_truth220-230.csv  ground_truth250-260.csv  ground_truth490-500.csv  ground_truth530-540.csv  ground_truth630-640.csv
.maintain/cog/FHEModels/server/: cog.yaml  predict.py
.maintain/cog/FHEModels/sklearn_model/: train.py  trained_model.pkl
.maintain/cog/FHEModels/test_data/: 110-120.csv  120-130.csv  150-160.csv  260-270.csv  330-340.csv  430-440.csv  500-510.csv  510-520.csv  610-620.csv  630-640.csv  test_data140-150.csv  test_data370-380.csv  test_data380-390.csv  test_data390-400.csv  test_data540-550.csv
.maintain/cog/health-client/: cog.yaml  predict.py
.maintain/cog/health-client/.cog/: openapi_schema.json
.maintain/cog/health-server/: predict.py
.maintain/cog/health-server/.cog/: openapi_schema.json
.maintain/cog/hello-world/.cog/: openapi_schema.json
.maintain/cog/resnet/: README.md  cog.yaml  predict.py
src/: bid_engine.rs  chain.rs  check.rs  cog.rs  config.rs  data.rs  http.rs  lib.rs  main.rs  protocol.rs  types.rs  utils.rs
src/engine/: bid_engine.rs  execution_engine.rs  mod.rs
tests/: cog_tests.rs  common.rs  dx.rs
(+104 files in other folders)
