[package]
name = "airo-wingman"
authors = ["Caibrain labs"]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/Aimosphere-Network/airo-wingman"
homepage = "https://aimosphere.network"
license = "GPL-3"

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
codegen-units = 1    # Setting this to 1 allows for more optimizations at the cost of slower compile time
lto = true           # Enables Link Time Optimization, enabling more aggressive optimizations across the entire codebase
opt-level = 3        # Optimize for speed regardless of binary size or compile time

[dependencies]
axum = "0.7"
utoipa = { version = "4", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7", features = ["axum"] }

envmnt = "0.10"
once_cell = "1.19"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
