[package]
name = "airo-wingman"
authors = ["Caibrain labs"]
version = "0.0.1"
edition = "2021"
repository = "https://github.com/Aimosphere-Network/airo-wingman"
homepage = "https://aimosphere.network"
license = "GPL-3"

[lib]
name = "airo_wingman"
path = "src/lib.rs"

[[bin]]
name = "wingman"
path = "src/main.rs"

[profile.release]
panic = "unwind"

[profile.production]
inherits = "release"
codegen-units = 1    # Setting this to 1 allows for more optimizations at the cost of slower compile time
lto = true           # Enables Link Time Optimization, enabling more aggressive optimizations across the entire codebase
opt-level = 3        # Optimize for speed regardless of binary size or compile time

[dependencies]
primitive-types = "0.12"
subxt = "0.37"
subxt-signer = "0.37"

axum = { version = "0.7", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
openapiv3 = "2.0"
utoipa = { version = "5.0.0-alpha.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "7.1.1-alpha.0", features = ["axum"] }

async-trait = "0.1"
dashmap = "6.0"
envmnt = "0.10"
once_cell = "1.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
strum = { version = "0.26", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["full"] }
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
